src/generate/rust/schema/snapshots/test_schema__nested_schema.snap
---
created: "2019-06-04T10:59:47.836909Z"
creator: insta@0.8.1
source: src/generate/rust/schema/test_schema.rs
expression: "crate::generate::rust::types(&api).unwrap()"
---
use serde::{Deserialize, Serialize};

#[derive(Clone, Debug, Serialize, Deserialize)]
#[serde(rename = "Foo::bar")]
pub struct FooBar {
    #[serde(rename = "baz")]
    baz: Option<String>,
}
#[derive(Clone, Debug, Serialize, Deserialize)]
#[serde(rename = "Foo")]
pub struct Foo {
    #[serde(rename = "bar")]
    bar: Option<FooBar>,
}

