src/generate/rust/schema/snapshots/test_schema__schema_ref.snap
---
created: "2019-06-04T11:44:29.168576Z"
creator: insta@0.8.1
source: src/generate/rust/schema/test_schema.rs
expression: "crate::generate::rust::types(&api).unwrap()"
---
use serde::{Deserialize, Serialize};

#[derive(Clone, Debug, Serialize, Deserialize)]
#[serde(rename = "Bar")]
pub struct Bar {
    #[serde(rename = "baz")]
    baz: Option<u64>,
}
#[derive(Clone, Debug, Serialize, Deserialize)]
#[serde(rename = "Foo")]
pub struct Foo {
    #[serde(rename = "bar")]
    bar: Option<FooBar>,
}
#[derive(Clone, Debug, Serialize, Deserialize)]
#[serde(rename = "Foo::bar")]
pub struct FooBar {
    #[serde(rename = "baz")]
    baz: Option<u64>,
}

