src/generate/rust/schema/snapshots/test_schema__simple_schema.snap
---
created: "2019-06-04T10:57:07.173593Z"
creator: insta@0.8.1
source: src/generate/rust/schema/test_schema.rs
expression: "crate::generate::rust::types(&api).unwrap()"
---
use serde::{Deserialize, Serialize};

#[derive(Clone, Debug, Serialize, Deserialize)]
#[serde(rename = "Foo")]
pub struct Foo {
    #[serde(rename = "bar")]
    bar: Option<String>,
}

